# 5S-TES-Workbench

./: .gitignore  README.md  example-config.yml  hello-world.ipynb  pyproject.toml  workbench-example.ipynb
.github/workflows/: build-sphinx-doc.yml  publish-main.yml  publish-test.yml  test-and-build.yml
docs/source/: conf.py  index.rst
src/five_safes_tes_workbench/: __init__.py  tes_builder.py  tes_builder_v2.py  workbench.py
src/five_safes_tes_workbench/aggregation/: data_processor.py  statistical_analyzer.py
src/five_safes_tes_workbench/auth/: auth.py  submission_api_session.py
src/five_safes_tes_workbench/clients/: analytics_tes_client.py  base_tes_client.py  bunny_tes_client.py  minio_client.py
src/five_safes_tes_workbench/common/: tes_builder_params.py  validate_params.py  validator_dataclass.py  validator_enums.py
src/five_safes_tes_workbench/common/enums/: validator_enums.py
src/five_safes_tes_workbench/common/exceptions/: auth_errors.py  base.py  config_errors.py  submission_errors.py  tes_error.py
src/five_safes_tes_workbench/common/params/: analysis_params.py  bunny_params.py  custom_template_params.py  helloworld_params.py  simple_sql_params.py  tes_builder_params.py  validate_params.py
src/five_safes_tes_workbench/constants/: minio.py  task_status.py
src/five_safes_tes_workbench/core/: minio_builder.py  minio_client.py  submit_builder.py  tes_builder.py  validate_builder.py
src/five_safes_tes_workbench/core/base/: submission_protocol.py  tes_builder_protocol.py  tes_template_abc.py  validate_protocols.py  validator_protocol.py
src/five_safes_tes_workbench/core/builders/: submit_builder.py  tes_builder.py  validate_builder.py
src/five_safes_tes_workbench/core/minio/: minio_client.py
src/five_safes_tes_workbench/core/tes/: base_registry.py  (+1 more)
src/five_safes_tes_workbench/enums/: auth_enums.py  config_enums.py
src/five_safes_tes_workbench/helpers/: auth.py  build_tags.py  children_task.py  minio.py  submit.py  token.py  url.py
src/five_safes_tes_workbench/infrastructure/: config_loader.py
src/five_safes_tes_workbench/models/: auth_dataclass.py  config_dataclass.py
src/five_safes_tes_workbench/notebooks/: hello-world.ipynb  pyproject.toml  workbench-example.ipynb
src/five_safes_tes_workbench/runners/: analysis_orchestrator.py  analysis_runner.py  metadata_runner.py
src/five_safes_tes_workbench/schema/: auth_schema.py  config_schema.py  validation_schema.py
src/five_safes_tes_workbench/services/: submission_polling_service.py  tes_builder_service.py
src/five_safes_tes_workbench/utils/: logger.py
tests/: test_builders.py  test_schemas.py  test_workbench.py
(+7 files in other folders)
