[project]
name = "five-safes-tes-workbench"
version = "0.1.0"
description = "Common feature library for working with 5S-TES"
readme = "README.md"
authors = [
    { name = "CodeByKarthik", email = "karthikeyan.sivakumar2@nottingham.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "minio>=7.2.20",
    "numpy>=2.4.4",
    "py-tes>=1.1.2",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tdigest>=0.5.2.2",
    "types-requests>=2.33.0.20260408",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
