[project]
name = "five-safes-tes-workbench"
version = "0.1.0"
description = "Common feature library for working with 5S-TES"
readme = "README.md"
authors = [
    { name = "CodeByKarthik", email = "karthikeyan.sivakumar2@nottingham.ac.uk" },
    { name = "Tri Thien Nguyen", email = "thien.nguyen1@nottingham.ac.uk" },
    { name = "Anwar Gaungoo", email = "anwar.gaungoo@nottingham.ac.uk" },
    { name = "Benjamin Partridge", email = "benjamin.partridge1@nottingham.ac.uk" },
]
requires-python = ">=3.13"
dependencies = [
    "py-tes>=1.1.2",
    "pydantic>=2.13.1",
    "pyyaml>=6.0.3",
    "types-requests>=2.33.0.20260408",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pyright]
reportMissingTypeStubs = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
]

[tool.ruff.lint.isort]
known-first-party = ["five_safes_tes_workbench"]